--- a/WcfServiceLibraryGuessWho/App.config
+++ b/WcfServiceLibraryGuessWho/App.config
@@ -38,7 +38,7 @@
 
 		<services>
 
-			<service name="WcfServiceLibraryGuessWho.Services.UserService"
+			<service name="GuessWho.Services.WCF.Services.UserService"
 					 behaviorConfiguration="mexBehavior">
 				<host>
 					<baseAddresses>
@@ -48,13 +48,13 @@
 
 				<endpoint address=""
 						  binding="netTcpBinding"
-						  contract="GuessWho.Contracts.Services.IUserService" />
+						  contract="GuessWhoContracts.Services.IUserService" />
 				<endpoint address="mex"
 						  binding="mexTcpBinding"
 						  contract="IMetadataExchange" />
 			</service>
 
-			<service name="WcfServiceLibraryGuessWho.Services.LoginService"
+			<service name="GuessWho.Services.WCF.Services.LoginService"
 					 behaviorConfiguration="mexBehavior">
 
 				<host>
@@ -65,13 +65,13 @@
 
 				<endpoint address=""
 						  binding="netTcpBinding"
-						  contract="GuessWho.Contracts.Services.ILoginService" />
+						  contract="GuessWhoContracts.Services.ILoginService" />
 				<endpoint address="mex"
 						  binding="mexTcpBinding"
 						  contract="IMetadataExchange" />
 			</service>
 
-			<service name="WcfServiceLibraryGuessWho.Services.ChatService"
+			<service name="GuessWho.Services.WCF.Services.ChatService"
 					 behaviorConfiguration="mexBehavior">
 
 				<host>
@@ -83,13 +83,13 @@
 				<endpoint address=""
 						  binding="netTcpBinding"
 						  bindingConfiguration="tcpBindingChat"
-						  contract="GuessWho.Contracts.Services.IChatService" />
+						  contract="GuessWhoContracts.Services.IChatService" />
 				<endpoint address="mex"
 						  binding="mexTcpBinding"
 						  contract="IMetadataExchange" />
 			</service>
 
-			<service name="WcfServiceLibraryGuessWho.Services.FriendService"
+			<service name="GuessWho.Services.WCF.Services.FriendService"
 					 behaviorConfiguration="mexBehavior">
 
 				<host>
@@ -100,13 +100,13 @@
 
 				<endpoint address=""
 						  binding="netTcpBinding"
-						  contract="GuessWho.Contracts.Services.IFriendService" />
+						  contract="GuessWhoContracts.Services.IFriendService" />
 				<endpoint address="mex"
 						  binding="mexTcpBinding"
 						  contract="IMetadataExchange" />
 			</service>
 
-			<service name="WcfServiceLibraryGuessWho.Services.MatchService"
+			<service name="GuessWho.Services.WCF.Services.MatchService"
 					 behaviorConfiguration="mexBehavior">
 
 				<host>
@@ -117,12 +117,28 @@
 
 				<endpoint address=""
 						  binding="netTcpBinding"
-						  contract="GuessWho.Contracts.Services.IMatchService" />
+						  contract="GuessWhoContracts.Services.IMatchService" />
 				<endpoint address="mex"
 						  binding="mexTcpBinding"
 						  contract="IMetadataExchange" />
 			</service>
 
+			<service name="GuessWho.Services.WCF.Services.UpdateProfileService"
+					 behaviorConfiguration="mexBehavior">
+
+				<host>
+					<baseAddresses>
+						<add baseAddress="net.tcp://localhost:8101/UpdateProfileService" />
+					</baseAddresses>
+				</host>
+
+				<endpoint address=""
+						  binding="netTcpBinding"
+						  contract="GuessWhoContracts.Services.IUpdateProfileService" />
+				<endpoint address="mex"
+						  binding="mexTcpBinding"
+						  contract="IMetadataExchange" />
+			</service>
 		</services>
 	</system.serviceModel>
 
