--- a/ConsoleGuessWho/App.config
+++ b/ConsoleGuessWho/App.config
@@ -91,7 +91,7 @@
 			</service>
 
 			<!-- LoginService -->
-			<service name="WcfServiceLibraryGuessWho.Services.LoginService"
+			<service name="GuessWho.Services.WCF.Services.LoginService"
 					 behaviorConfiguration="mexBehavior">
 				<host>
 					<baseAddresses>
@@ -107,7 +107,7 @@
 			</service>
 
 			<!-- ChatService -->
-			<service name="WcfServiceLibraryGuessWho.Services.ChatService"
+			<service name="GuessWho.Services.WCF.Services.ChatService"
 					 behaviorConfiguration="mexBehavior">
 				<host>
 					<baseAddresses>
@@ -124,7 +124,7 @@
 			</service>
 
 			<!-- FriendService -->
-			<service name="WcfServiceLibraryGuessWho.Services.FriendService"
+			<service name="GuessWho.Services.WCF.Services.FriendService"
 					 behaviorConfiguration="mexBehavior">
 				<host>
 					<baseAddresses>
@@ -140,7 +140,7 @@
 			</service>
 
 			<!-- MatchService -->
-			<service name="WcfServiceLibraryGuessWho.Services.MatchService"
+			<service name="GuessWho.Services.WCF.Services.MatchService"
 					 behaviorConfiguration="mexBehavior">
 				<host>
 					<baseAddresses>
@@ -150,6 +150,22 @@
 				<endpoint address=""
 						  binding="netTcpBinding"
 						  contract="GuessWhoContracts.Services.IMatchService" />
+				<endpoint address="mex"
+						  binding="mexTcpBinding"
+						  contract="IMetadataExchange" />
+			</service>
+
+			<!-- UpdateProfileService -->
+			<service name="GuessWho.Services.WCF.Services.UpdateProfileService"
+					 behaviorConfiguration="mexBehavior">
+				<host>
+					<baseAddresses>
+						<add baseAddress="net.tcp://localhost:8101/UpdateProfileService" />
+					</baseAddresses>
+				</host>
+				<endpoint address=""
+						  binding="netTcpBinding"
+						  contract="GuessWhoContracts.Services.IUpdateProfileService" />
 				<endpoint address="mex"
 						  binding="mexTcpBinding"
 						  contract="IMetadataExchange" />
