--- a/WcfServiceLibraryGuessWho/GuessWhoServices.csproj
+++ b/WcfServiceLibraryGuessWho/GuessWhoServices.csproj
@@ -129,6 +129,7 @@
     <Compile Include="Services\ChatService.cs" />
     <Compile Include="Services\LoginService.cs" />
     <Compile Include="Services\MatchService.cs" />
+    <Compile Include="Services\Notifications\LobbyNotifier.cs" />
     <Compile Include="Services\UpdateProfileService.cs" />
     <Compile Include="Services\UserService.cs" />
   </ItemGroup>
