--- a/ConsoleGuessWho/App.config
+++ b/ConsoleGuessWho/App.config
@@ -1,11 +1,11 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
-	
+
 	<configSections>
 		<section name="entityFramework"
 				 type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089"
 				 requirePermission="false" />
-		
+
 		<section name="log4net"
 				 type="log4net.Config.Log4NetConfigurationSectionHandler, log4net" />
 	</configSections>
@@ -17,7 +17,7 @@
 		<add key="Smtp.DisplayName" value="GuessWho"/>
 		<add key="Smtp.TimeoutMs" value="30000"/>
 	</appSettings>
-	
+
 	<connectionStrings configSource="Secrets\ConnectionStrings.local.config" />
 
 	<log4net>
@@ -61,6 +61,11 @@
 						 receiveTimeout="00:10:00">
 					<security mode="None" />
 				</binding>
+
+				<binding name="tcpBindingNoSecurity">
+					<security mode="None" />
+				</binding>
+
 			</netTcpBinding>
 		</bindings>
 
@@ -74,7 +79,6 @@
 		</behaviors>
 
 		<services>
-			<!-- UserService -->
 			<service name="GuessWho.Services.WCF.Services.UserService"
 					 behaviorConfiguration="mexBehavior">
 				<host>
@@ -84,13 +88,13 @@
 				</host>
 				<endpoint address=""
 						  binding="netTcpBinding"
+						  bindingConfiguration="tcpBindingNoSecurity"
 						  contract="GuessWhoContracts.Services.IUserService" />
 				<endpoint address="mex"
 						  binding="mexTcpBinding"
 						  contract="IMetadataExchange" />
 			</service>
 
-			<!-- LoginService -->
 			<service name="GuessWho.Services.WCF.Services.LoginService"
 					 behaviorConfiguration="mexBehavior">
 				<host>
@@ -100,13 +104,13 @@
 				</host>
 				<endpoint address=""
 						  binding="netTcpBinding"
+						  bindingConfiguration="tcpBindingNoSecurity"
 						  contract="GuessWhoContracts.Services.ILoginService" />
 				<endpoint address="mex"
 						  binding="mexTcpBinding"
 						  contract="IMetadataExchange" />
 			</service>
 
-			<!-- ChatService -->
 			<service name="GuessWho.Services.WCF.Services.ChatService"
 					 behaviorConfiguration="mexBehavior">
 				<host>
@@ -123,7 +127,6 @@
 						  contract="IMetadataExchange" />
 			</service>
 
-			<!-- FriendService -->
 			<service name="GuessWho.Services.WCF.Services.FriendService"
 					 behaviorConfiguration="mexBehavior">
 				<host>
@@ -133,13 +136,13 @@
 				</host>
 				<endpoint address=""
 						  binding="netTcpBinding"
+						  bindingConfiguration="tcpBindingNoSecurity"
 						  contract="GuessWhoContracts.Services.IFriendService" />
 				<endpoint address="mex"
 						  binding="mexTcpBinding"
 						  contract="IMetadataExchange" />
 			</service>
 
-			<!-- MatchService -->
 			<service name="GuessWho.Services.WCF.Services.MatchService"
 					 behaviorConfiguration="mexBehavior">
 				<host>
@@ -149,13 +152,13 @@
 				</host>
 				<endpoint address=""
 						  binding="netTcpBinding"
+						  bindingConfiguration="tcpBindingNoSecurity"
 						  contract="GuessWhoContracts.Services.IMatchService" />
 				<endpoint address="mex"
 						  binding="mexTcpBinding"
 						  contract="IMetadataExchange" />
 			</service>
 
-			<!-- UpdateProfileService -->
 			<service name="GuessWho.Services.WCF.Services.UpdateProfileService"
 					 behaviorConfiguration="mexBehavior">
 				<host>
@@ -165,6 +168,7 @@
 				</host>
 				<endpoint address=""
 						  binding="netTcpBinding"
+						  bindingConfiguration="tcpBindingNoSecurity"
 						  contract="GuessWhoContracts.Services.IUpdateProfileService" />
 				<endpoint address="mex"
 						  binding="mexTcpBinding"
@@ -175,7 +179,7 @@
 
 	<entityFramework>
 		<providers>
-			<provider invariantName="System.Data.SqlClient" 
+			<provider invariantName="System.Data.SqlClient"
 					  type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
 		</providers>
 	</entityFramework>
