Modificaciones a la clase matchService y matchData

--- a/ConsoleGuessWho/App.config
+++ b/ConsoleGuessWho/App.config
@@ -51,8 +51,16 @@
 	</log4net>
 
 	<system.serviceModel>
+		<!-- Server -->
 		<bindings>
 			<netTcpBinding>
+				<binding>
+					<security mode="None">
+						<message clientCredentialType="None" />
+						<transport clientCredentialType="None" />
+					</security>
+				</binding>
+
 				<binding name="tcpBindingChat"
 						 maxReceivedMessageSize="65536"
 						 openTimeout="00:02:00"
