Modificacion dentro del app.config

--- a/ConsoleGuessWho/App.config
+++ b/ConsoleGuessWho/App.config
@@ -87,7 +87,7 @@
 					 behaviorConfiguration="mexBehavior">
 				<host>
 					<baseAddresses>
-						<add baseAddress="net.tcp://localhost:8095/UserService" />
+						<add baseAddress="net.tcp://172.20.10.2:8095/UserService" />
 					</baseAddresses>
 				</host>
 				<endpoint address=""
@@ -103,7 +103,7 @@
 					 behaviorConfiguration="mexBehavior">
 				<host>
 					<baseAddresses>
-						<add baseAddress="net.tcp://localhost:8097/LoginService" />
+						<add baseAddress="net.tcp://172.20.10.2:8097/LoginService" />
 					</baseAddresses>
 				</host>
 				<endpoint address=""
@@ -119,7 +119,7 @@
 					 behaviorConfiguration="mexBehavior">
 				<host>
 					<baseAddresses>
-						<add baseAddress="net.tcp://localhost:8098/ChatService" />
+						<add baseAddress="net.tcp://172.20.10.2:8098/ChatService" />
 					</baseAddresses>
 				</host>
 				<endpoint address=""
@@ -136,7 +136,7 @@
 					 behaviorConfiguration="mexBehavior">
 				<host>
 					<baseAddresses>
-						<add baseAddress="net.tcp://localhost:8099/FriendService" />
+						<add baseAddress="net.tcp://172.20.10.2:8099/FriendService" />
 					</baseAddresses>
 				</host>
 				<endpoint address=""
@@ -152,7 +152,7 @@
 					 behaviorConfiguration="mexBehavior">
 				<host>
 					<baseAddresses>
-						<add baseAddress="net.tcp://localhost:8100/MatchService" />
+						<add baseAddress="net.tcp://172.20.10.2:8100/MatchService" />
 					</baseAddresses>
 				</host>
 				<endpoint address=""
@@ -168,7 +168,7 @@
 					 behaviorConfiguration="mexBehavior">
 				<host>
 					<baseAddresses>
-						<add baseAddress="net.tcp://localhost:8101/UpdateProfileService" />
+						<add baseAddress="net.tcp://172.20.10.2:8101/UpdateProfileService" />
 					</baseAddresses>
 				</host>
 				<endpoint address=""
