--- a/ConsoleGuessWho/App.config
+++ b/ConsoleGuessWho/App.config
@@ -174,6 +174,22 @@
 						  binding="mexTcpBinding"
 						  contract="IMetadataExchange" />
 			</service>
+
+			<service name="GuessWho.Services.WCF.Services.LeaderboardService"
+					 behaviorConfiguration="mexBehavior">
+				<host>
+					<baseAddresses>
+						<add baseAddress="net.tcp://localhost:8102/LeaderboardService" />
+					</baseAddresses>
+				</host>
+				<endpoint address=""
+						binding="netTcpBinding"
+						bindingConfiguration="tcpBindingNoSecurity"
+						contract="GuessWhoContracts.Services.ILeaderboardService" />
+				<endpoint address="mex"
+						binding="mexTcpBinding"
+						contract="IMetadataExchange" />
+			</service>
 		</services>
 	</system.serviceModel>
 
