--- a/WcfServiceLibraryGuessWho/GuessWhoServices.csproj
+++ b/WcfServiceLibraryGuessWho/GuessWhoServices.csproj
@@ -127,6 +127,7 @@
     <Compile Include="Security\CodeGenerator.cs" />
     <Compile Include="Services\FriendService.cs" />
     <Compile Include="Services\ChatService.cs" />
+    <Compile Include="Services\LeaderboardService.cs" />
     <Compile Include="Services\LoginService.cs" />
     <Compile Include="Services\MatchService.cs" />
     <Compile Include="Services\UpdateProfileService.cs" />
