--- a/ConsoleGuessWho/GuessWhoConsoleClient.csproj
+++ b/ConsoleGuessWho/GuessWhoConsoleClient.csproj
@@ -62,6 +62,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Infraestructure\Wcf\DelegateInstanceProvider.cs" />
+    <Compile Include="Infraestructure\Wcf\DelegateServiceBehavior.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
