refactor: implementar inyección de dependencias y estandarizar manejo de errores
- Refactorización de MatchData a clases parciales eliminando la instanciación manual de DbContext.
- Implementación de IMatchData para desacoplar la lógica de acceso a datos del repositorio.
- Actualización de LoginManager para forzar la salida de sesiones activas mediante GameSessionRepository.
- Implementación de LoginFaultMapper y MatchFaultMapper para centralizar el mapeo de excepciones WCF.
- Rediseño de MatchService y LoginService para soportar inyección de dependencias por constructor.

--- a/ClassLibraryGuessWho/GuessWhoDataAccess.csproj
+++ b/ClassLibraryGuessWho/GuessWhoDataAccess.csproj
@@ -84,6 +84,7 @@
     <Compile Include="Data\DataAccess\EmailVerification\Parameters\IncrementFailedAttemptArgs.cs" />
     <Compile Include="Data\DataAccess\EmailVerification\Parameters\ResendLimitsQuery.cs" />
     <Compile Include="Data\DataAccess\Friends\FriendshipData.cs" />
+    <Compile Include="Data\DataAccess\Matches\IMatchData.cs" />
     <Compile Include="Data\DataAccess\Matches\MatchData.Helpers.cs" />
     <Compile Include="Data\DataAccess\Matches\MatchData.Lobby.cs" />
     <Compile Include="Data\DataAccess\Matches\Parameters\ChooseSecretCharacterArgs.cs" />
