--- a/WcfServiceLibraryGuessWho/GuessWhoServices.csproj
+++ b/WcfServiceLibraryGuessWho/GuessWhoServices.csproj
@@ -126,16 +126,22 @@
     <Compile Include="Coordinators\EmailVerification\VerificationCodeService.cs" />
     <Compile Include="Coordinators\EmailVerification\VerificationEmailDispatcher.cs" />
     <Compile Include="Coordinators\FaultsCatalogs\EmailVerificationFaults.cs" />
+    <Compile Include="Coordinators\FaultsCatalogs\LoginServiceFaults.cs" />
+    <Compile Include="Coordinators\FaultsCatalogs\Mappers\LoginFaultMapper.cs" />
     <Compile Include="Coordinators\FaultsCatalogs\PasswordRecoveryFaults.cs" />
     <Compile Include="Coordinators\FaultsCatalogs\UserFaultMapper.cs" />
     <Compile Include="Coordinators\FaultsCatalogs\UserRegistrationFaults.cs" />
     <Compile Include="Coordinators\FaultsCatalogs\UserServiceFaults.cs" />
+    <Compile Include="Coordinators\Interfaces\FaultsMappers\ILoginFaultMapper.cs" />
     <Compile Include="Coordinators\Interfaces\IEmailVerificationManager.cs" />
     <Compile Include="Coordinators\Interfaces\EmailVerification\IVerificationEmailDispatcher.cs" />
+    <Compile Include="Coordinators\Interfaces\ILoginManager.cs" />
     <Compile Include="Coordinators\Interfaces\IPasswordRecoveryManager.cs" />
     <Compile Include="Coordinators\Interfaces\FaultsMappers\IUserFaultMapper.cs" />
     <Compile Include="Coordinators\Interfaces\IUserRegistrationManager.cs" />
     <Compile Include="Coordinators\Interfaces\EmailVerification\IVerificationCodeService.cs" />
+    <Compile Include="Coordinators\LoginManager.cs" />
+    <Compile Include="Coordinators\Parameters\LoginArgs.cs" />
     <Compile Include="Coordinators\Parameters\RegisterUserArgs.cs" />
     <Compile Include="Coordinators\PasswordRecoveryManager.cs" />
     <Compile Include="Coordinators\UserRegistrationManager.cs" />
@@ -143,9 +149,11 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repositories\Implementation\AvatarRepository.cs" />
     <Compile Include="Repositories\Implementation\EmailVerificationRepository.cs" />
+    <Compile Include="Repositories\Implementation\GameSessionRepository.cs" />
     <Compile Include="Repositories\Implementation\UserAccountRepository.cs" />
     <Compile Include="Repositories\Interfaces\IAvatarRepository.cs" />
     <Compile Include="Repositories\Interfaces\IEmailVerificationRepository.cs" />
+    <Compile Include="Repositories\Interfaces\IGameSessionRepository.cs" />
     <Compile Include="Repositories\Interfaces\IUserAccountRepository.cs" />
     <Compile Include="Security\PasswordHasher.cs" />
     <Compile Include="Security\CodeGenerator.cs" />
