--- a/WcfServiceLibraryGuessWho/GuessWhoServices.csproj
+++ b/WcfServiceLibraryGuessWho/GuessWhoServices.csproj
@@ -132,20 +132,23 @@
     <Compile Include="Coordinators\FaultsCatalogs\UserFaultMapper.cs" />
     <Compile Include="Coordinators\FaultsCatalogs\UserRegistrationFaults.cs" />
     <Compile Include="Coordinators\FaultsCatalogs\UserServiceFaults.cs" />
+    <Compile Include="Coordinators\GameSessionManager.cs" />
     <Compile Include="Coordinators\Interfaces\FaultsMappers\ILoginFaultMapper.cs" />
     <Compile Include="Coordinators\Interfaces\IEmailVerificationManager.cs" />
     <Compile Include="Coordinators\Interfaces\EmailVerification\IVerificationEmailDispatcher.cs" />
+    <Compile Include="Coordinators\Interfaces\IGameSessionManager.cs" />
+    <Compile Include="Coordinators\Interfaces\ILoginCoordinator.cs" />
     <Compile Include="Coordinators\Interfaces\ILoginManager.cs" />
     <Compile Include="Coordinators\Interfaces\IPasswordRecoveryManager.cs" />
     <Compile Include="Coordinators\Interfaces\FaultsMappers\IUserFaultMapper.cs" />
     <Compile Include="Coordinators\Interfaces\IUserRegistrationManager.cs" />
     <Compile Include="Coordinators\Interfaces\EmailVerification\IVerificationCodeService.cs" />
+    <Compile Include="Coordinators\LoginCoordinator.cs" />
     <Compile Include="Coordinators\LoginManager.cs" />
     <Compile Include="Coordinators\Parameters\LoginArgs.cs" />
     <Compile Include="Coordinators\Parameters\RegisterUserArgs.cs" />
     <Compile Include="Coordinators\PasswordRecoveryManager.cs" />
     <Compile Include="Coordinators\UserRegistrationManager.cs" />
-    <Compile Include="Coordinators\UserSessionCoordinator.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repositories\Implementation\AvatarRepository.cs" />
     <Compile Include="Repositories\Implementation\EmailVerificationRepository.cs" />
